<resources>
    <string name="app_name">Tienda Bedu</string>
    <string name="catalogo">Catálogo</string>
    <string name="inventario">Inventario</string>
    <string name="carrito">Carrito</string>
    <string name="olvide_password"><u>Olvide password!</u></string>
    <string name="login">Email</string>
    <string name="password">Password</string>
    <string name="logging">enviar</string>
    <string name="register"><u>registrate!</u></string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="link_login"><u>Ya tienes cuenta! Accede!</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tipoproducto">Tipo de producto</string>
    <string name="modelo_del_producto">Modelo del producto</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="campo_error_datos">Error ingresar letras y números</string>
    <string name="user">usuario</string>
    <string name="userCerrar">Cerrar sesión</string>
    <string name="userDetails">Detalles de la cuenta</string>
    <string name="confirmar_button">Confirmar</string>
    <string name="button_pagar">Pagar</string>
    <string name="total_compra">Total de la orden de compra:</string>
    <string name="button_cancelar">Cancelar</string>
    <!-- AccountDetails Strings -->
    <string name="detalles_cuenta">Detalles de la cuenta</string>
    <string name="textpass">*****</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="cambiar_nombre">Cambiar Nombre</string>
    <string name="ingrese_nuevo_nombre">Ingrese su nuevo nombre</string>
    <string name="cambiar_apellido">Cambiar apellido</string>
    <string name="ingrese_nuevo_apellido">Ingrese su nuevo apellido</string>
    <string name="editar_correo">Editar correo</string>
    <string name="ingrese_nuevo_correo">Ingrese su nuevo correo</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="repita_contrasena">Repita su contraseña</string>
    <string name="notification_compra">Compra pendiente</string>
    <string name="description_text">descripción de la notificación</string>
    <string name="compraNotificationTitle">Carrito pendiente</string>
    <string name="compraNotificationtext">Estas a unos pasos de completar tu compra</string>
    <string name="loggingGoogle">Continuar con Google</string>

    <string-array name="type_model">
        <item>Selecciona tipo Producto</item>
        <item>Calzado</item>
        <item>Ropa</item>
        <item>Hogar</item>
    </string-array>
    <!--Array con los valores de la cabecera de la tabla-->
    <string-array name="cabecera_tabla">
        <item>Id Producto</item>
        <item>Descripción Producto</item>
        <item>Cantidad Producto</item>
        <item>Precio Producto</item>
        <item>Estado Producto</item>
    </string-array>

    <string name="downloading">Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>

    <string name="new_version">New version</string>
    <string name="new_version_msg">We recommend installing the update</string>

    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>

</resources>