<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="30dip"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/logging" />

    <TextView
        android:id="@+id/link_to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#0b84aa"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:gravity="center"
        android:textColor="#0b84aa"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:gravity="center"
        android:text="@string/olvide_password"
        android:textColor="#0b84aa"
        android:textSize="20sp" />
</LinearLayout>