<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_nombre"
        android:textSize="20sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/editNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ingrese_nuevo_nombre"
        android:imeOptions="actionDone"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelar"
            android:layout_marginEnd="16dp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_aceptar"
            android:padding="8dp"/>

    </LinearLayout>
</LinearLayout>