<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/editLastnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_apellido"
        android:textSize="20sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/editLastnameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ingrese_nuevo_apellido"
        android:imeOptions="actionDone"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/cancelButtonLn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelar"
            android:layout_marginEnd="16dp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/acceptButtonLn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_aceptar"
            android:padding="8dp"/>

    </LinearLayout>


</LinearLayout>